fix elements jumping on data loading in pnl summary

--- a/src/components/ProfitAndLossSummaries/internal/profit_and_loss_summaries_summary.scss
+++ b/src/components/ProfitAndLossSummaries/internal/profit_and_loss_summaries_summary.scss
@@ -2,10 +2,8 @@
   display: grid;
   min-block-size: 3rem;
   grid-template-columns: auto minmax(0, 1fr);
-  column-gap: var(--spacing-xs);
-  row-gap: var(--spacing-3xs);
-  grid-template-areas:
-    'chart heading'
+  gap: var(--spacing-3xs) var(--spacing-xs);
+  grid-template-areas: 'chart heading'
     'chart amount'
   ;
 
@@ -14,12 +12,12 @@
     column-gap: var(--spacing-md);
   }
 
-  [slot=heading] {
+  [slot="heading"] {
     grid-area: heading;
     align-self: end;
   }
 
-  [slot=amount] {
+  [slot="amount"] {
     grid-area: amount;
     align-self: start;
   }
@@ -27,8 +25,11 @@
 
 .Layer__ProfitAndLossSummariesSummaryChartArea {
   grid-area: chart;
-
   align-content: center;
   border-radius: var(--border-radius-xs);
   background: var(--color-base-50);
+}
+
+.Layer__ProfitAndLossSummariesSummaryChartAreaEmptyFrame {
+  grid-area: chart;
 }
